[project]
name = "binaural-sound-lab"
version = "0.1.0"
description = "A simple sandbox for binaural-style stereo sound experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sounddevice",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["binaural_engine"]
